<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">isidore</string>
    <string name="preference_file_key">com.tbardici.isidore.PREFERENCE_FILE_KEY</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_create_droplet">Create Droplet</string>
    <string name="hostname">Hostname</string>
    <string name="size">Size</string>
    <string name="region">Region</string>
    <string name="image">Image</string>
    <string name="create_droplet">Create Droplet</string>
    <string name="droplet_list">Droplet List</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_gimme_icons">GimmeIcons</string>

</resources>
