<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:onClick="createDroplet"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="7"
    tools:context=".CreateDropletActivity" >

    <EditText
        android:id="@+id/dropletName"
        android:layout_gravity="left|top"
        android:ems="10"
        android:hint="@string/hostname"
        android:layout_marginBottom="4dp" 
        android:layout_width="fill_parent">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblSize"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:text="@string/size"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:layout_marginBottom="4dp"
        android:id="@+id/spinSize"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_width="fill_parent"/>
    
	<TextView
        android:id="@+id/lblRegion"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:text="@string/region"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:layout_marginBottom="4dp"
        android:id="@+id/spinRegion"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_width="fill_parent"/>
    
	<TextView
        android:id="@+id/lblImage"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:text="@string/image"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:layout_marginBottom="4dp"
        android:id="@+id/spinImage"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_width="fill_parent"/>

    <Button
        android:id="@+id/btnCreateDroplet"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:onClick="createDroplet"
        android:text="@string/create_droplet" />

</GridLayout>