<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item android:id="@+id/action_new_droplet" 
        android:orderInCategory="99" 
        android:title="@string/create_droplet" 
        android:showAsAction="always" 
        android:icon="@android:drawable/ic_menu_add" 
        android:visible="true" android:enabled="true"></item>
    <item android:id="@+id/action_droplet_list" 
        android:orderInCategory="98" 
        android:title="@string/droplet_list" 
        android:visible="true" 
        android:enabled="true" 
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_agenda" ></item>

        <item android:id="@+id/show_drawables" 
        android:orderInCategory="98" 
        android:title="@string/droplet_list" 
        android:visible="true" 
        android:enabled="true" 
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_agenda" ></item>
</menu>
